build_out6_utf8.log
Processing view_rp2350b (platform: https://github.com/maxgerhardt/platform-raspberrypi.git; board: rpipico2; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/raspberrypi/rpipico2.html
PLATFORM: Raspberry Pi RP2040 (1.19.0+sha.79ce473) > Pico 2
HARDWARE: RP2350 150MHz, 512KB RAM, 4MB Flash
DEBUG: Current (blackmagic) External (blackmagic, cmsis-dap, jlink, picoprobe, raspberrypi-swd)
PACKAGES: 
 - framework-arduinopico @ 1.50501.0+sha.275e73d 
 - tool-picotool-rp2040-earlephilhower @ 5.140200.250530 (14.2.0) 
 - tool-pioasm-rp2040-earlephilhower @ 5.140200.250530 (14.2.0) 
 - toolchain-rp2040-earlephilhower @ 5.140200.250530 (14.2.0)
Flash size: 4.00MB
Sketch size: 4.00MB
Filesystem size: 0.00MB
PSRAM size: 0.00MB
Maximium Sketch size: 4190208 EEPROM start: 0x103ff000 Filesystem start: 0x103ff000 Filesystem end: 0x103ff000
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
[nanopb] Installing Protocol Buffers dependencies
Requirement already satisfied: protobuf>=3.19.1 in C:\Users\cocou\.platformio\penv\Lib\site-packages (6.33.6)
[nanopb] No generation needed.
Found 82 compatible libraries
Scanning dependencies...
Dependency Graph
|-- AceButton @ 1.9.1
|-- PacketSerial @ 1.4.0
|-- Nanopb @ 0.4.7
|-- Simple FOC @ 2.2.0
|-- TFT_eSPI @ 2.4.25
|-- HX711 @ 0.7.5
|-- Adafruit VEML7700 Library @ 1.1.1
|-- LittleFS @ 0.1.0
Building in release mode
Compiling .pio\build\view_rp2350b\src\configuration.cpp.o
Archiving .pio\build\view_rp2350b\lib7df\libWire.a
Archiving .pio\build\view_rp2350b\libfdf\libSPI.a
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\common\base_classes\CurrentSense.cpp.o
Indexing .pio\build\view_rp2350b\lib7df\libWire.a
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\common\base_classes\FOCMotor.cpp.o
Indexing .pio\build\view_rp2350b\libfdf\libSPI.a
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\common\base_classes\Sensor.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\common\foc_utils.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\common\lowpass_filter.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\common\pid.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\common\time_utils.cpp.o
C:\Users\cocou\.platformio\penv\Scripts\pio.exe : 
firmware_rp2350b\src\configuration.cpp: In member 
function 'bool Configuration::loadFromDisk()':
At line:1 char:1
+ C:\Users\cocou\.platformio\penv\Scripts\pio.exe run -c 
platformio_rp2 ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (firmware_rp 
   2350...oadFromDisk()'::String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
firmware_rp2350b\src\configuration.cpp:39:29: error: 
'PB_PersistentConfiguration_fields' was not declared in 
this scope; did you mean 
'PB_PersistentConfiguration_size'?
   39 |     if (!pb_decode(&stream, 
PB_PersistentConfiguration_fields, &pb_buffer_)) {
      |                             
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                             
PB_PersistentConfiguration_size
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\communication\Commander.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\communication\StepDirListener.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\current_sense\InlineCurrentSense.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\current_sense\LowsideCurrentSense.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\current_sense\hardware_specific\atmega_mcu.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\current_sense\hardware_specific\due_mcu.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\current_sense\hardware_specific\esp32_adc_driver.cpp.o
firmware_rp2350b\src\configuration.cpp: In member 
function 'bool Configuration::saveToDisk()':
firmware_rp2350b\src\configuration.cpp:75:29: error: 
'PB_PersistentConfiguration_fields' was not declared in 
this scope; did you mean 
'PB_PersistentConfiguration_size'?
   75 |     if (!pb_encode(&stream, 
PB_PersistentConfiguration_fields, &pb_buffer_)) {
      |                             
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                             
PB_PersistentConfiguration_size
*** [.pio\build\view_rp2350b\src\configuration.cpp.o] 
Error 1
========================== [FAILED] Took 5.94 seconds 
==========================
